--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbcUrl= jdbc:mysql:///car?characterEncoding=utf-8
+jdbcUrl= jdbc:mysql:///car
 driverClass=com.mysql.jdbc.Driver
 user=root
 password=root
