--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<!-- spring版本号 -->
 		<spring.version>4.2.1.RELEASE</spring.version>
 		<!-- mybatis版本号 -->
-		<mybatis.version>3.2.6</mybatis.version>
+		<mybatis.version>3.2.8</mybatis.version>
 		<!-- log4j日志文件管理包版本 -->
 		<slf4j.version>1.7.7</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
@@ -267,7 +267,7 @@
 <dependency>
     <groupId>org.mybatis</groupId>
     <artifactId>mybatis</artifactId>
-    <version>3.3.0</version>
+    <version>${mybatis.version}</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
 <dependency>
