--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,20 @@
     <artifactId>standard</artifactId>
     <version>1.1.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+<dependency>
+    <groupId>com.alibaba</groupId>
+    <artifactId>fastjson</artifactId>
+    <version>1.2.6</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.3</version>
+</dependency>
+
 
   </dependencies>
   
